--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,7 +7,7 @@ servo_base: &servo_base
 
 led_base: &led_base
   low: 0
-  high: 4095
+  high: 1000
   init: 0.2
 
 pwm_channels:
@@ -15,23 +15,36 @@ pwm_channels:
     <<: *servo_base
     channel: 2
     invert: true
+    low: 200
+    high: 500
 
   head_tilt:
     <<: *servo_base
     channel: 4
+    low: 400
+    high: 500
+    init: 0.3
 
   left_arm:
     <<: *servo_base
     channel: 1
+    low: 200
+    high: 500
+    init: 0
 
   right_arm:
     <<: *servo_base
     channel: 0
     invert: true
+    low: 300
+    high: 550
+    init: 0
 
   torso:
     <<: *servo_base
     channel: 3
+    low: 200
+    high: 500
 
   left_eye_r:
     <<: *led_base
