--- a/config/settings.yml
+++ b/config/settings.yml
@@ -81,3 +81,32 @@ led_display:
   - clock_pin: 19
     data_pin: 26
     segments: 16
+
+letters:
+  " ": [ false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false ]
+  A: [ false, true, true, true, true, false, true, false, false, true, true, true, false, false, false, false ]
+  B: [ true, false, true, false, true, true, false, true, true, true, true, true, false, false, false, false ]
+  C: [ true, false, false, true, true, false, false, true, false, true, true, false, false, false, false, false ]
+  D: [ false, true, true, false, true, false, false, true, true, true, true, true, false, false, false, false ]
+  E: [ true, false, false, true, true, true, false, true, true, true, true, true, false, false, false, false ]
+  F: [ true, false, false, false, true, true, false, false, true, true, true, true, false, false, false, false ]
+  G: [ true, false, true, true, true, false, false, true, false, true, true, false, false, false, false, false ]
+  H: [ true, true, true, true, false, true, false, false, true, true, true, true, false, false, false, false,  ]
+  I: [ true, false, false, true, true, true, true, true, true, false, false, true, false, false, false, false,  ]
+  J: [ true, true, true, false, true, false, false, true, true, false, true, false, false, false, false, false,  ]
+  K: [ true, false, true, true, false, true, false, false, true, true, true, true, false, false, false, false,  ]
+  L: [ false, false, false, true, false, false, false, true, true, true, true, true, false, false, false, false,  ]
+  M: [ true, true, true, true, true, true, false, false, true, true, true, true, false, false, false, false,  ]
+  N: [ false, true, true, true, true, false, false, false, true, true, true, true, false, false, false, false,  ]
+  O: [ false, true, true, false, true, false, false, true, false, true, true, false, false, false, false, false,  ]
+  P: [ true, true, true, false, true, false, true, false, true, true, true, true, false, false, false, false,  ]
+  Q: [ false, true, true, true, true, false, true, true, false, true, true, false, false, false, false, false,  ]
+  R: [ false, true, false, true, true, false, true, false, true, true, true, true, false, false, false, false,  ]
+  S: [ true, false, true, true, true, true, false, true, true, true, false, true, false, false, false, false,  ]
+  T: [ true, false, false, false, true, true, true, true, true, false, false, false, false, false, false, false,  ]
+  U: [ true, true, true, false, false, false, false, true, true, true, true, false, false, false, false, false,  ]
+  V: [ true, true, false, false, false, false, true, false, true, true, true, true, false, false, false, false,  ]
+  W: [ true, true, true, true, false, false, true, true, true, true, true, true, false, false, false, false,  ]
+  X: [ true, false, true, true, false, true, false, false, true, false, true, true, false, false, false, false,  ]
+  Y: [ true, false, false, false, false, true, true, true, true, false, false, false, false, false, false, false,  ]
+  Z: [ true, false, false, true, true, true, false, true, true, false, true, true, false, false, false, false,  ]
