--- a/config/settings.yml
+++ b/config/settings.yml
@@ -82,8 +82,20 @@ led_display:
     data_pin: 26
     segments: 16
 
+# font from https://fontstruct.com/fontstructions/show/325977/4x3_pixel
 letters:
   " ": [ false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false ]
+  0: [ false, true, true, false, true, true, false, true, false, true, true, false, false, false, false, false,  ]
+  1: [ false, false, false, true, true, true, true, true, true, false, false, true, false, false, false, false,  ]
+  2: [ false, true, false, true, true, false, true, true, true, false, false, true, false, false, false, false,  ]
+  3: [ false, true, true, false, true, true, false, true, true, false, false, true, false, false, false, false,  ]
+  4: [ true, true, true, true, false, true, false, false, true, true, false, false, false, false, false, false,  ]
+  5: [ true, false, true, false, true, true, false, true, true, true, false, false, false, false, false, false,  ]
+  6: [ true, false, true, false, true, false, true, true, false, true, true, true, false, false, false, false,  ]
+  7: [ true, true, false, false, true, false, true, false, true, false, false, true, false, false, false, false,  ]
+  8: [ true, true, true, true, true, true, false, true, true, true, true, true, false, false, false, false,  ]
+  9: [ true, true, true, false, true, true, false, true, false, true, false, true, false, false, false, false,  ]
+  .: [ false, false, false, false, false, false, false, true, false, false, false, false, false, false, false, false,  ]
   A: [ false, true, true, true, true, false, true, false, false, true, true, true, false, false, false, false ]
   B: [ true, false, true, false, true, true, false, true, true, true, true, true, false, false, false, false ]
   C: [ true, false, false, true, true, false, false, true, false, true, true, false, false, false, false, false ]
