--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,7 @@ version = "0.1.0"
 authors = ["Matt Harrington <querry43@gmail.com>"]
 
 [dependencies]
-config = "0.8"
-i2c-pca9685 = { git = "https://github.com/querry43/i2c-pca9685" }
-i2cdev = "0.3"
-rppal = "0.2"
+pi-robot = { git = "https://github.com/querry43/rust-pi-robot.git" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
